--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: utils
 description: A new Flutter package project.
 version: 0.0.1
-homepage:
+
+homepage: https://github.com/sserkanml/utils
 
 environment:
   sdk: '>=2.18.6 <3.0.0'
