--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
-name: utils
-description: A new Flutter package project.
-version: 0.0.1
+name: utils_custom1
+description: this package is used for every single project uses same structure with this package that jobs make it  easy
+version: 0.0.2
 
 homepage: https://github.com/sserkanml/utils
 
